# katex-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/katex/: Cargo.toml
crates/katex/benches/: perf.rs
crates/katex/src/: build_common.rs  build_html.rs  build_mathml.rs  core.rs  delimiter.rs  dom_tree.rs  font_metrics_data.rs  macro_expander.rs  mathml_tree.rs  namespace.rs  parse_tree.rs  stretchy.rs  tree.rs  units.rs  web_context.rs  wide_character.rs
crates/katex/src/define_environment/: array.rs  cd.rs  types.rs
crates/katex/src/define_function/: mod.rs
crates/katex/src/functions/: accent.rs  accentunder.rs  arrow.rs  char.rs  color.rs  cr.rs  def.rs  delimsizing.rs  enclose.rs  environment.rs  font.rs  genfrac.rs  hbox.rs  horiz_brace.rs  href.rs  html.rs  htmlmathml.rs  includegraphics.rs  kern.rs  lap.rs  math.rs  mathchoice.rs  mclass.rs  mod.rs  op.rs  operatorname.rs  ordgroup.rs  overline.rs  phantom.rs  pmb.rs  raisebox.rs  relax.rs  rule.rs  sizing.rs  smash.rs  sqrt.rs  styling.rs  supsub.rs  symbols_op.rs  symbols_ord.rs  (+6 more)
crates/katex/src/functions/utils/: assemble_sup_sub.rs  mod.rs
crates/katex/src/macros/: builtins.rs  mod.rs
crates/katex/src/parser/: mod.rs
crates/katex/src/svg_geometry/: mod.rs
crates/katex/src/symbols/: mod.rs
crates/katex/src/types/: mod.rs  parse_error.rs  settings.rs  source_location.rs
crates/katex/src/unicode/: mod.rs  unicode_sup_or_sub.rs  unicode_symbols.rs
crates/katex/src/utils/: mod.rs
crates/katex/tests/: katex_spec.rs
crates/katex/tests/perf/: README.md  package-lock.json  package.json  wasm-perf.js
crates/katex/tests/setup/: mod.rs
data/: font_metrics_data.json  sigmas_and_xis.json  symbols.json
docs/: FLAMEGRAPH.md
src/: build_common.rs  build_html.rs  build_mathml.rs  build_tree.rs  context.rs  core.rs  delimiter.rs  dom_tree.rs  font_metrics.rs  font_metrics_data.rs  lib.rs  macro_expander.rs  mathml_tree.rs  namespace.rs  options.rs  spacing_data.rs  stretchy.rs  style.rs  tree.rs  units.rs  wasm.rs  wide_character.rs
src/define_environment/: array.rs  cd.rs  mod.rs  types.rs
src/functions/: accentunder.rs  char.rs  color.rs  cr.rs  def.rs  delimsizing.rs  enclose.rs  environment.rs  font.rs  genfrac.rs  (+29 more)
tests/: katex_spec.rs
utils/: extract_font_metric.cjs  extract_sigmas_and_xis.cjs  extract_symbols.js  package-lock.json  package.json
xtask/: Cargo.toml
(+26 files in other folders)
