[workspace]
members = ["crates/katex", "xtask"]
default-members = ["crates/katex"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.metadata]
repository = "https://github.com/katex-rs/katex-rs"

[profile.release]
opt-level = "z"
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
lto = false
